added macro layout blocks

--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,64 @@
 /* UTILITY */
 body {
     font-family: 'Montserrat', sans-serif;
+
+    /* ! DA RIMUOVERE */
+    color: white;
+}
+
+/* HEADER */
+header {
+    background-color: black;
+    width: 50px;
+    position: fixed;
+    height: calc(100% - 80px);
+}
+
+.inside-content {
+    padding-top: 80px;
+}
+
+/* MAIN */
+.main-container {
+    height: calc(100vh - 80px);
+    background-color: var(--main-color);
+    overflow-y: auto;
+    padding-left: 50px;
+}
+
+.inside-header {
+    height: 80px;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+
+/* FOOTER */
+footer {
+    height: 80px;
+    background-color: var(--secondary-color);
+    position: fixed;
+    width: 100%;
+}
+
+
+
+
+/************************/
+/*      RESPONSIVE      */
+/************************/
+
+/* SCREEN @768px */
+
+@media screen and (min-width: 768px) {
+    header {
+        width: 200px;
+    }
+
+    .main-container {
+        padding-left: 200px;
+    }
+
+
 }
