fixed w custom properties

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@
     --font-color: #85878c;
     --detail-color: #adff2f;
     --bar-empty-color: #5a5a5a;
-    --bar-full-color: #c1c1c1;    
+    --bar-full-color: #c1c1c1;
+    --fixed-space-sm: 50px;
+    --fixed-space-md: 80px;
+    --fixed-space-lg: 200px;
 }
 
 /* UTILITY */
@@ -26,25 +29,25 @@ body {
 /* HEADER */
 header {
     background-color: black;
-    width: 50px;
+    width: var(--fixed-space-sm);
     position: fixed;
-    height: calc(100% - 80px);
+    height: calc(100%  - var(--fixed-space-md));
 }
 
 .inside-content {
-    padding-top: 80px;
+    padding-top: var(--fixed-space-md);
 }
 
 /* MAIN */
 .main-container {
-    height: calc(100vh - 80px);
+    height: calc(100vh - var(--fixed-space-md));
     background-color: var(--main-color);
     overflow-y: auto;
-    padding-left: 50px;
+    padding-left: var(--fixed-space-sm);
 }
 
 .inside-header {
-    height: 80px;
+    height: var(--fixed-space-md);
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     width: 100%;
@@ -53,7 +56,7 @@ header {
 
 /* FOOTER */
 footer {
-    height: 80px;
+    height: var(--fixed-space-md);
     background-color: var(--secondary-color);
     position: fixed;
     width: 100%;
@@ -70,11 +73,11 @@ footer {
 
 @media screen and (min-width: 768px) {
     header {
-        width: 200px;
+        width: var(--fixed-space-lg);
     }
 
     .main-container {
-        padding-left: 200px;
+        padding-left: var(--fixed-space-lg);
     }
 
 
