--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,13 @@ a:hover {
 }
 
 .btn:hover {
-    font-size: 14px;
+    font-size: var(--font-size-sm);
 }
 
 #btn-add {
     background-color: var(--font-color);
     color: black;
-    font-size: 30px;
+    font-size: var(--font-size-lg);
     font-weight: 500;
     padding: 0px 12px;
 }
@@ -194,6 +194,7 @@ main {
     height: var(--fixed-space-md);
     background-color: rgba(0, 0, 0, 0.5);
     position: sticky;
+    z-index: 1;
     top: 0px;
     right: 0px;
     justify-content: right;
@@ -279,21 +280,26 @@ footer {
 
 footer i {
     color: white;
-    padding: 0px var(--padding-space-xxs)
+    padding: 0px var(--padding-space-xxs);
+}
+
+.controls i {
+    font-size: var(--font-size-lg);
+}
+
+footer i:hover {
+    color: var(--detail-color);
 }
 
 .on-playing img {
     padding-right: var(--padding-space-xs);
+    height: 40px;
+    width: 40px;
 }
 
 .on-playing, .share {
     flex-basis: 25%;
     padding: 0px var(--padding-space-xs);
-}
-
-.on-playing img {
-    height: 50px;
-    width: 50px;
 }
 
 .on-playing h1 {
@@ -308,12 +314,34 @@ footer i {
     width: 100%;
     height: 5px;
     background-color: var(--bar-empty-color);
+    cursor: pointer;
 }
 
 .progress {
     height: 100%;
     width: 25%;
     background: var(--bar-full-color);
+    position: relative;
+}
+
+.progress .dot {
+    display: none;
+    position: absolute;
+    right: 0;
+    bottom: 50%;
+    transform: translate(50%, 50%);
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: var(--bar-full-color);
+}
+
+.bar:hover .progress {
+    background-color: var(--detail-color);
+}
+
+.bar:hover .dot {
+    display: block;
 }
 
 .bar span {
@@ -377,6 +405,11 @@ footer i {
     .download-side div {
         display: flex;
         align-items: center;
+    }
+
+    .on-playing img {
+        height: 50px;
+        width: 50px;
     }
 }
 
